[package]
name = "fastview"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { version = "0.30" }
wgpu = { version = "23", features = [] }
bytemuck = { version = "1.12", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
ab_glyph = "0.2"
imageproc = "0.25"
futures-lite = "2.0"
log = "0.4"
env_logger = "0.11"
sled = "0.34"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
crossbeam-channel = "0.5"
interprocess = "1.2.1"

[build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = 3
lto = true
strip = true